Additional fix for #180 on Firefox

--- a/app/assets/stylesheets/_element-rails.scss
+++ b/app/assets/stylesheets/_element-rails.scss
@@ -20,6 +20,6 @@
 }
 
 .el-table .cell {
-  word-break: break-word;
+  word-break: normal;
   -ms-word-break: normal;
 }
